# bitfunc

./: .gitignore  .pylintrc  Bitfunc.hsc  BitfuncTest.hs  Bitfunc_hs.chs  COPYRIGHT  Doxyfile  Makefile.am  Makefile.in  README  _bitfunc_cy.pxd  aclocal.m4  ar-lib  bap_parse_il.c  bitfunc.h  bitfunc_cy.c  bitfunc_cy.pyx  common.am  configure  configure.ac  create-bundle.sh  flake.nix  makeitcrash.c  py-compile  runonvm  test_bitfunc.py  todo.org
funcsat/: .gitignore  DEBUGGING  Doxyfile.in  Makefile.am  Makefile.in  README.src  TODO  check_solution.c  configure  configure.ac  gen-timing-graphs.R  main.c
funcsat/src/: .gitignore  Makefile.am  Makefile.in  backbone.c  backbone.nw  binwatch.c  clause.c  debug.c  fibheap.c  fifoq.c  frontend.c  funcsat.c  funcsat.h  funcsat.w  funcsat_internal.h  funcsat_test.c  intvec.c  posvec.c  proof.c  restart.c  solcount.c  vec.c
funcsat/src/funcsat/: backbone.h  binwatch.h  debug.h  fibheap.h  fibheap_internal.h  fifoq.h  frontend.h  internal.h  intvec.h  posvec.h  proof.h  restart.h  system.h  vec.h  vecgen.h.in
funcsat/test/: .gitignore  Makefile.am  Makefile.in  compare-picosat  fuzz  gen-timing-graphs.R  gen.c  genrand.h  preproc-graphdata.sh  test-assume.sh  test-assume2.sh  test-assume3.sh  test-countsol.sh  test-countsol2.sh  test-fibheap.c  test-incremental.c  test-resolve.c  test-sat-cnf.sh  test-uf20.sh  test-uf50.sh  test-uuf50.sh
llvm-frontend/: Makefile.common.in
llvm-frontend/autoconf/: AutoRegen.sh  Makefile.common  configure.ac
llvm-frontend/include/: bfll_bitcode.h  linklist_bbs.h  linklist_literal.h  llvm_machine.h
llvm-frontend/lib/bfllvm/: bfll_bitcode.cpp  gen_lkl_sources.sh  linklist.c.in  linklist.h.in  linklist_bbs.cpp  linklist_literal.c  llvm_machine.cpp
llvm-frontend/test/: popcnt.c
llvm-frontend/tools/bfss/: main.cpp
src/: .gitignore  Makefile.am  Makefile.in  abc_bridge.c  aiger.c  array.c  backbone.c  backbone.nw  bap.c  bap_lex.l  bap_parse.y  bap_parse_types.h  bfprobes.c  bfprobes.h  bitfunc.c  bitvec.c  cbranch.c  circuits.c  debug.c  klee_mem.c  llvm_definitions.c  machine_state.c  mem.c  pcode_definitions.c  program.c  program_ssa.nw  samepath.py  solve.c  sparsebits.c
src/bitfunc/: aiger.h  array.h  bap.h  bitfunc_internal.h  bitvec.h  circuits.h  circuits_internal.h  config.h.in  debug.h  klee_mem.h  llvm_definitions.h  machine_state.h  mem.h  pcode_definitions.h  program.h  program_internal.h  sparsebits.h  types.h
src/python/bitfunc/: __init__.py  expdag.py  llvm_symex.py  memory.py  parse_smt2.py  qc.py  sexp_parser.py
test/: .gitignore  Makefile.am  Makefile.in  adder.c  bftest.c  bitvec-test.c  expdag_test.c  expdag_test.py  factoring.c  factoring.py  gcd.c  gcd.py  gcd2.c  incremental-test.c  llvm_test.py  machine_state_test.c  mem_test.c  mitre.c  mitre.h  pcode-aig.c  pcode-aig.w  pcode_test.c  pickle_test.py  popcnt.c  popcnt_defs.c  regexp.c  smt2_test.py  synthesis_crc.c  synthesis_swap.c
